argocd/media-server/radarr/deploy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: radarr
  name: radarr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: radarr
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  template:
    metadata:
      annotations: null
      labels:
        app: radarr
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: kubernetes.io/hostname
                    operator: In
                    values:
                      - marcus-server
      containers:
        - env:
            - name: PGID
              value: "3000"
            - name: PUID
              value: "3000"
            - name: TZ
              value: America/Chicago
          image: docker.io/linuxserver/radarr:6.2.1@sha256:4c490ccd44d31feb49dc4cc542f2148a420fc1ae0c1ba94e59b39ba4bf112716
          imagePullPolicy: IfNotPresent
          name: radarr
          resources:
            limits:
              memory: 1Gi
            requests:
              cpu: 10m
              memory: 300Mi
          ports:
            - containerPort: 7878
              protocol: TCP
          volumeMounts:
            - mountPath: /config
              name: config
            - mountPath: /data/media
              name: media
          readinessProbe:
            httpGet:
              path: /
              port: 7878
            initialDelaySeconds: 30
            periodSeconds: 30
            timeoutSeconds: 5
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /
              port: 7878
            initialDelaySeconds: 60
            periodSeconds: 15
            timeoutSeconds: 5
            failureThreshold: 3
      restartPolicy: Always
      volumes:
        - name: media
          hostPath:
            path: /data/media
        - name: config
          persistentVolumeClaim:
            claimName: config
