argocd/media-server/radarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: radarr
  name: radarr
spec:
  ports:
    - name: "http"
      port: 7878
      targetPort: 7878
  selector:
    app: radarr
