argocd/media-server/radarr/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: Radarr
    gethomepage.dev/icon: radarr
    gethomepage.dev/description: "Radarr is a movie collection manager for Usenet and BitTorrent users."
    gethomepage.dev/pod-selector: app=radarr
  labels:
    app.kubernetes.io/instance: radarr-app
  name: radarr-httproute
  namespace: radarr
spec:
  parentRefs:
    - name: cilium-private-gateway
      namespace: cilium
      sectionName: https
  hostnames:
  - radarr.yanello.net
  rules:
  - backendRefs:
    - name: ak-outpost-radarr
      namespace: authentik
      port: 9000
